<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id" translatable="false">133159242026292</string>

    <string name="app_name" translatable="false">EventPlaner</string>

    <string name="UserName">Username</string>
    <string name="Password">Password</string>
    <string name="loginInvalid">Authentication failed (incorrect username or password)</string>
    <string name="Login">LOGIN</string>
    <string name="noAccountTextView">Do not have an account yet?</string>
    <string name="registerLinkButton">Register now!</string>
    <string name="PasswordAgain">Repeat password</string>
    <string name="EMail">Email</string>
    <string name="Register">REGISTER</string>
    <string name="loginLinkButton">Login now!</string>
    <string name="alreadyAccountTextView">Do you have an account?</string>
    <string name="registerInvalid">Registration failed</string>
    <string name="registerErrorPassword">Passwords do not match</string>
    <string name="registerErrorUserName">Username is already taken</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="eMailRequired">Email is required</string>
    <string name="passwordRequired">Password is required</string>
    <string name="passwordAgainRequired">Password must be repeated</string>
    <string name="passwordLenght">Password must be at least 6 characters long</string>
    <string name="passwordDoNotMatch">Passwords do not match</string>
    <string name="accountCreated">Account created</string>
    <string name="loginSuccessful">Logged in successfully</string>
    <string name="sendPasswordResetEmail">The email was sent successfully</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="firstAndLastName">First and last name</string>
    <string name="nickName">Nickname</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="addressHint">Street, number, place</string>
    <string name="mobileHint">Mobile number</string>
    <string name="egHint">e.g. bear</string>
    <string name="titleAccountSettings">Account Settings</string>
    <string name="logoutMenu">Logout</string>
    <string name="settingsMenu">Settings</string>
    <string name="profileMenu">Profile</string>
    <string name="eventsMenu">Events</string>
    <string name="dialogProfilePositive">Confirm</string>
    <string name="dialogProfileNegative">Cancel</string>
    <string name="firstnameHint">Firstname</string>
    <string name="lastnameHint">Lastname</string>
    <string name="nicknameHint">Nickname</string>
    <string name="firstlastnameHint">Sam Sample</string>
    <string name="account_delete">Delete Account</string>
    <string name="title_activity_start">Loading</string>
    <string name="all_events">All events</string>
    <string name="own_events">Own events</string>
    <string name="event_overview">Event-Overview</string>
    <string name="account_logout">Do you really want to logout?</string>
    <string name="item_menu_event_verlassen">Leave event</string>
    <string name="dialog_event_verlassen">" Do you really want to leave the event?"</string>
    <string name="item_menu_event_löschen">Delete event</string>
    <string name="dialog_event_löschen">Do you really want to delete the event?\nEach participant will be automatically removed from the event.</string>
    <string name="event_create">Create</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="no_image_selected">No image selected</string>
    <string name="uploading">uploading...</string>
    <string name="eventname">Eventname</string>
    <string name="event_time">Time of the event</string>
    <string name="startzeit">Start time</string>
    <string name="endzeit">End time</string>
    <string name="more_days">Multiple days?</string>
    <string name="enddatum">End date</string>
    <string name="event_join_link">Event join link:</string>
    <string name="event_delete">Delete</string>
    <string name="event_edit">Edit</string>
    <string name="event_mute">Mute</string>
    <string name="event_leave">Leave</string>
    <string name="describe_your_event">Describe your event!</string>
    <string name="default_description">%owner has not added a description yet!</string>
    <string name="owner">Owner</string>
    <string name="member">Member</string>
    <string name="invite_with_link">Invite with link</string>
    <string name="results">Results</string>
    <string name="event_link_desc">Click the link to share it.</string>
    <string name="dialog_voting_löschen">Do you really want to delete this voting?</string>
    <string name="answer_options">Answer options:</string>
    <string name="end_time">End time</string>
    <string name="your_question">Your question?</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_10">Answer 10</string>
    <string name="answer_9">Answer 9</string>
    <string name="answer_8">Answer 8</string>
    <string name="answer_7">Answer 7</string>
    <string name="answer_6">Answer 6</string>
    <string name="answer_5">Answer 5</string>
    <string name="answer_4">Answer 4</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="NewText">NEW</string>

</resources>