<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorWhiteBlue"
    android:clipToPadding="false"
    android:elevation="5dp"
    android:orientation="vertical">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fab_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center|start"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimaryGrey"
            app:backgroundTint="@color/white"
            app:elevation="2dp"
            app:iconTint="@color/colorPrimaryGrey"
            app:shapeAppearanceOverlay="@style/fab_rounded_right"
            app:srcCompat="@drawable/ic_arrow_back"
            app:theme="@style/MaterialTheme"
            app:tint="@color/colorPrimaryGrey" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/create_voting"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center|end"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimaryGrey"
            app:backgroundTint="@color/white"
            app:elevation="2dp"
            app:iconTint="@color/colorPrimaryGrey"
            app:shapeAppearanceOverlay="@style/fab_rounded_left"
            app:srcCompat="@drawable/ic_check"
            app:theme="@style/MaterialTheme"
            app:tint="@color/colorPrimaryGrey" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_add" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/your_question"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/end_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/end_time"
                        android:inputType="datetime" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/answer_options" />

            <EditText
                android:id="@+id/o1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_1"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/o2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_2"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/o3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_3"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/o4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_4"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/o5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_5"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/o6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_6"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/o7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_7"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/o8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_8"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/o9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_9"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <EditText
                android:id="@+id/o10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/answer_10"
                android:maxLength="40"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/add_answer"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_plus" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
