<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.morgroup.eventplaner.activity.ConfirmActivity"
    tools:showIn="@layout/activity_confirm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="-16dp">

        <RelativeLayout
            android:id="@+id/editFirstLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/dobImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/dobImageView"
                android:text="@string/firstAndLastName"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_first_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/dobImageView"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/nameImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/nameImageView"
                android:text="@string/nickName"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/nameImageView"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/emailImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/emailImageView"
                android:text="@string/EMail"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/emailImageView"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/mobileImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/mobileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_toRightOf="@id/mobileImageView"
                android:text="@string/mobile"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="20dp"
                android:hint="@string/mobileHint"
                android:layout_toRightOf="@id/mobileImageView"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">

            <ImageView
                android:id="@+id/addressImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/addressImageView"
                android:text="@string/address"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="20dp"
                android:hint="@string/addressHint"
                android:layout_toRightOf="@id/addressImageView"
                android:textColor="@color/colorPrimaryGrey"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>